tools/tests/errors/regex_backreference.ki
var regex = import("regex")
discard regex.compile("(a)\\1")
